--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,24 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+  <script src="firebase-config.js" type="application/javascript"></script>
+
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyBbKVwPlwSuc2jjPynSNYbMe1wb5QESB3o",
+      authDomain: "appfreshmart.firebaseapp.com",
+      databaseURL: "https://appfreshmart-default-rtdb.firebaseio.com",
+      projectId: "appfreshmart",
+      storageBucket: "appfreshmart.appspot.com",
+      messagingSenderId: "974722877307",
+      appId: "1:974722877307:web:da475ef4063a58f8439fde",
+      measurementId: "G-RRVJYLEKG1"
+    };
+  </script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
